--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<p class="center"><i class="fas fa-database"></i> MariaDB / PhpMyAdmin</p>
 		</div>
 		<div>
-			<a href="https://eve.lairantoine.fr/" target="_blank">
+			<a href="#" target="_blank">
 				<img src="./images/eve.png" alt="">
 			</a>
 			<p>Réalisé de septembre 2019 à février 2020, ce projet est ma première réalisation sur une longue durée.</p>
