feat : adjust style

--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@
 			</div>
 			<br />
 			<div class="row">
-				<label class="form-label message-label">Message <span>*</span></label>
-				<textarea class="form-control" name="message" placeholder="Taper votre message ici..."></textarea>
+				<div class="colfull">
+					<label class="form-label message-label">Message <span>*</span></label>
+					<textarea class="form-control" name="message" placeholder="Taper votre message ici..."></textarea>
+				</div>
 			</div>
 			<input class="btn btn-secondary" type="submit" value="Envoyer">
 
