feat : add animation & CV update

--- a/index.html
+++ b/index.html
@@ -82,17 +82,18 @@
 		<p class="name">Je suis Antoine Lair, </p>
 		<p class="typing">Développeur Full-stack</p>
 		<p>
-			<i class="fab fa-php"></i>
-			<i class="fab fa-js"></i>
+			
 		</p>
-		<p>
-			<i class="fab fa-laravel"></i>
-			<i class="fab fa-symfony"></i>
-			<i class="fab fa-magento"></i>
-			<i class="fab fa-react"></i>
-			<i class="fab fa-vuejs"></i>
-			<i class="fab fa-angular"></i>
-		</p>
+		<div class="icon-circle">
+			<span><i class="fab fa-php"></i></span>
+			<span><i class="fab fa-js"></i></span>
+			<span><i class="fab fa-laravel"></i></span>
+			<span><i class="fab fa-react"></i></span>
+			<span><i class="fab fa-symfony"></i></span>
+			<span><i class="fab fa-vuejs"></i></span>
+			<span><i class="fab fa-magento"></i></span>
+			<span><i class="fab fa-angular"></i></span>
+		</div>
 	</section>
 	<section id="about">
 		<div class="aboutleft">
