--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Antoine Lair</title>
+        <meta charset="UTF-8">
 
         <!-- Import icons Font Awesome -->
 	    <script src="https://kit.fontawesome.com/58dd6bd8ca.js" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
         <section class="banner">
@@ -47,7 +48,7 @@
 
         <section class="about" id="about">
             <div class="about-img">
-                <img src="img/antoine-lair.jpg" alt="Antoine Lair">
+                <img src="./img/antoine-lair.jpg" alt="Antoine Lair">
             </div>
             <div class="about-text">
                 <div class="about-title-text">
@@ -79,42 +80,42 @@
 
             <div class="projects-container">
                 <div class="projects-card">
-                    <img class="projects-svg" src="img/ucchamoy.png" alt="UC Chamoy">
+                    <img class="projects-svg" src="./img/ucchamoy.png" alt="UC Chamoy">
                     <div class="projects-card-simple">
                         <h3>UC Chamoy</h3>
                         <p><i class="fab fa-laravel"></i>  Laravel</p>
                     </div>
                 </div>
                 <div class="projects-card">
-                    <img class="projects-svg" src="img/antoinelair.png" alt="Dashboard d'entraînement">
+                    <img class="projects-svg" src="./img/antoinelair.png" alt="Dashboard d'entraînement">
                     <div class="projects-card-simple">
                         <h3>Dashboard d'entraînement</h3>
                         <p><i class="fab fa-strava"></i>  Strava API / Laravel</p>
                     </div>
                 </div>
                 <div class="projects-card">
-                    <img class="projects-svg" src="img/senstri.png" alt="Sens Triathlon">
+                    <img class="projects-svg" src="./img/senstri.png" alt="Sens Triathlon">
                     <div class="projects-card-simple">
                         <h3>Sens Triathlon</h3>
                         <p><i class="fab fa-react"></i>  React / Node.js</p>
                     </div>
                 </div>
                 <div class="projects-card">
-                    <img class="projects-svg" src="img/magento.png" alt="Démo Magento Luma">
+                    <img class="projects-svg" src="./img/magento.png" alt="Démo Magento Luma">
                     <div class="projects-card-simple">
                         <h3>Démo Magento Luma</h3>
                         <p><i class="fab fa-magento"></i>  Magento</p>
                     </div>
                 </div>
                 <div class="projects-card">
-                    <img class="projects-svg" src="img/magiline.png" alt="POC Configurateur de piscine">
+                    <img class="projects-svg" src="./img/magiline.png" alt="POC Configurateur de piscine">
                     <div class="projects-card-simple">
                         <h3>POC Configurateur de piscine</h3>
                         <p><i class="fab fa-js"></i>  Three.js</p>
                     </div>
                 </div>
                 <div class="projects-card">
-                    <img class="projects-svg" src="img/reactnative.png" alt="Pokémon App">
+                    <img class="projects-svg" src="./img/reactnative.png" alt="Pokémon App">
                     <div class="projects-card-simple">
                         <h3>Pokémon App</h3>
                         <p><i class="fab fa-react"></i>  React Native / Expo</p>
@@ -131,27 +132,27 @@
 
             <div class="interests-container">
                 <div class="interests-card">
-                    <img class="interests-svg" src="img/triathlon-main.svg" alt="Triathlon">
-                    <img class="interests-svg-hover-left" src="img/triathlon-hover.svg" alt="Triathlon">
-                    <img class="interests-svg-hover-right" src="img/triathlon-hover.svg" alt="Triathlon">
+                    <img class="interests-svg" src="./img/triathlon-main.svg" alt="Triathlon">
+                    <img class="interests-svg-hover-left" src="./img/triathlon-hover.svg" alt="Triathlon">
+                    <img class="interests-svg-hover-right" src="./img/triathlon-hover.svg" alt="Triathlon">
                     <div class="interests-card-simple">
                         <h3>Triathlon</h3>
                         <p>Triathlète depuis 2014, je rêve de venir à bout de mon premier Ironman. Avec 2 Half-Ironman à mon actif, je compte réaliser ce rêve le 22 juin 2025. Préparer ces objectifs m'aide à garder un équilibre vie pro et perso.</p>
                     </div>
                 </div>
                 <div class="interests-card">
-                    <img class="interests-svg" src="img/bike-main.svg" alt="Vélo">
-                    <img class="interests-svg-hover-left" src="img/bike-hover.svg" alt="Vélo">
-                    <img class="interests-svg-hover-right" src="img/bike-hover.svg" alt="Vélo">
+                    <img class="interests-svg" src="./img/bike-main.svg" alt="Vélo">
+                    <img class="interests-svg-hover-left" src="./img/bike-hover.svg" alt="Vélo">
+                    <img class="interests-svg-hover-right" src="./img/bike-hover.svg" alt="Vélo">
                     <div class="interests-card-simple">
                         <h3>Vélo ultra-distance</h3>
                         <p>Avec une course de 300km réalisé en 2024 sur la RAP et un premier voyage à vélo de 800km en préparation, cette discipline renforce ma confiance en moi et mes capacités à m'adapter aux situations difficiles.</p>
                     </div>
                 </div>
                 <div class="interests-card">
-                    <img class="interests-svg" src="img/marathon-main.svg" alt="Marathon">
-                    <img class="interests-svg-hover-left" src="img/marathon-hover.svg" alt="Marathon">
-                    <img class="interests-svg-hover-right" src="img/marathon-hover.svg" alt="Marathon">
+                    <img class="interests-svg" src="./img/marathon-main.svg" alt="Marathon">
+                    <img class="interests-svg-hover-left" src="./img/marathon-hover.svg" alt="Marathon">
+                    <img class="interests-svg-hover-right" src="./img/marathon-hover.svg" alt="Marathon">
                     <div class="interests-card-simple">
                         <h3>Marathon</h3>
                         <p>Premier pas dans les courses d'endurance avec le marathon de Paris en 2023, le marathon est une épreuve qui permet d'améliorer la résilience. Mon prochain sera celui de Toulouse en 2024.</p>
