--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><i class="fab fa-angular"></i></li>
                 </ul>
 
-                <a class="banner-btn" href="">
+                <a class="banner-btn" href="#contact">
                     <svg id="hide-hover" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="50%" cy="50%" r="50" fill="#FB512D"></circle>
                     </svg>
