--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Import icons Font Awesome -->
 	    <script src="https://kit.fontawesome.com/58dd6bd8ca.js" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" type="text/css" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="./main.css">
     </head>
     <body>
         <section class="banner">
