feat : better responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Antoine Lair</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Import icons Font Awesome -->
 	    <script src="https://kit.fontawesome.com/58dd6bd8ca.js" crossorigin="anonymous"></script>
