--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
             <div class="contact-form-container">
                 <h2>Contactez-moi !</h2>
                 
-                <form action="mailto:lair.antoine89@orange.fr" method="POST">
+                <form>
                     <div class="row">
-                        <input type="text" name="name" placeholder="Nom *" required>
-                        <input type="text" name="name" placeholder="Prénom *" required>
+                        <input type="text" name="firstname" placeholder="Nom *" required>
+                        <input type="text" name="lastname" placeholder="Prénom *" required>
                     </div>
                     <div class="row">
                         <input type="email" name="email" placeholder="Email *" required>
@@ -179,7 +179,7 @@
                         <textarea name="message" placeholder="Message *" required rows="4"></textarea>
                     </div>
 
-                    <a class="contact-btn" href="" target="_blank">
+                    <a class="contact-btn" href="mailto:contact@lairantoine.fr">
                         <svg id="hide-hover" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="50%" cy="50%" r="50" fill="#FB512D"></circle>
                         </svg>
